Fix: Store a Certificate, add valitation and swagger doc
